--- a/appply-now/src/App.css
+++ b/appply-now/src/App.css
@@ -28,10 +28,22 @@
   color: #61dafb;
 }
 
+.Navbar {
+  display: flex;
+  gap: 20px;
+  cursor: pointer;
+}
+
+.active {
+  color: rgb(72, 72, 255);
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
